# Cooperative-Multi-Drone-Target-Tracking

./: .gitignore  README.md  demo.py  pyproject.toml
assets/: surveillance.urdf
config/: default.yaml
docs/: configuration.md  experiments.md  filters.md  getting-started.md  visualization.md
experiments/: replay_gated.py  sweep_gated.py  tracking_env_gated.py  train_gated.py
experiments/v2/: README.md  __init__.py  config.py  env.py  eval.py  fim.py  networks.py  replay.py  train.py
experiments/v3/: __init__.py  baselines.py  config.py  eval.py  fim.py  replay.py  spread_env.py  track_env.py  train_spread.py  train_track.py
experiments/v4/: __init__.py  baselines.py  config.py  eval.py  fim.py  replay.py  spread_env.py  track_env.py  train_track.py
experiments/v5/: __init__.py  baselines.py  config.py  eval.py  fim.py  replay.py  spread_env.py  track_env.py  train_spread.py
experiments/v6/: __init__.py  baselines.py  config.py  eval.py  fim.py  replay.py  spread_env.py  track_env.py  train.py
experiments/v7/: __init__.py  baselines.py  config.py  eval.py  replay.py  spread_env.py  track_env.py  train.py
presentation/: aa273_presentation.html  generate_figures.py  generate_layer1_figures.py
scripts/: eval_all_scenarios.py  eval_paper_table.py  eval_rl.py  eval_robustness.py  eval_spread_baseline.py  monte_carlo.py  monte_carlo_consensus.py  pid_tuning.py  replay_baseline_cluster.py  run_baseline.py  run_baselines_v4.py  run_consensus.py  run_consensus_imm.py  run_filters.py  train_rl.py
src/control/: surveillance_pid.py
src/dynamics/: target.py  (+1 more)
(+30 files in other folders)
